<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneStepFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/navs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/videoView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/hello_blank_fragment"
                app:layout_constraintBottom_toTopOf="@+id/shortDescription"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:resize_mode="fixed_width" />


            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/shortDescription"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/Description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoView" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/Description"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/navs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/navigation_previous"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E2A3F4"
            android:drawableStart="@drawable/previous"
            android:padding="16dp"
            android:text="@string/previous"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/navigation_position"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E2A3F4"
            android:padding="16dp"
            android:text="@string/position"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/navigation_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#E2A3F4"
            android:drawableEnd="@drawable/next"
            android:padding="16dp"
            android:text="@string/next"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

